--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,25 +1,25 @@
 version: 0.15.0.{build}
 
 platform:
-  - x86
+#  - x86
   - x64
 
 configuration:
-  - Release
+#  - Release
   - Debug
-  - Light-Release
-  - Light-Debug
+#  - Light-Release
+#  - Light-Debug
 
 environment:
   matrix:
     - VSVER: 12
-    - VSVER: 10
+ #   - VSVER: 10
 
 matrix:
   allow_failures:
     # not included in AppVeyor right now
-    - platform: x64
-      VSVER: 10
+#    - platform: x64
+#      VSVER: 10
 
 install:
   - ps: if ($env:APPVEYOR_PULL_REQUEST_NUMBER -and $env:APPVEYOR_BUILD_NUMBER -ne ((Invoke-RestMethod `
@@ -56,13 +56,15 @@ install:
         }
         $env:NMAKE_EXTRA="OPENSSL_DEF=/DENABLE_OPENSSL ${env:NMAKE_EXTRA}"
         # the prebuilt zlib is 32 bit only
-        If ($env:Platform -Match "x86") {
-          If (!(Test-Path -Path "C:\zlib-dll" )) {
-            appveyor DownloadFile "https://prdownloads.sourceforge.net/libpng/zlib${env:ZLIB_VER}-dll.zip" -FileName zlib-dll.zip
-            7z x zlib-dll.zip -oC:\zlib-dll
-          }
-          $env:NMAKE_EXTRA="ZLIB_DEF=/DENABLE_ZLIB ${env:NMAKE_EXTRA}"
-        }
+        #If ($env:Platform -Match "x86") {
+        #  If (!(Test-Path -Path "C:\zlib-dll" )) {
+        #    appveyor DownloadFile "https://prdownloads.sourceforge.net/libpng/zlib${env:ZLIB_VER}-dll.zip" -FileName zlib-dll.zip
+        #    7z x zlib.zip -oC:\zlib
+        #  }
+        #  $env:NMAKE_EXTRA="ZLIB_DEF=/DENABLE_ZLIB ${env:NMAKE_EXTRA}"
+        #}
+        appveyor DownloadFile "https://prdownloads.sourceforge.net/libpng/zlib${env:ZLIB_VER}.zip" -FileName zlib.zip
+        7z x zlib-dll.zip -oC:\zlib
       }
   - ps: $env:VSCOMNTOOLS=(Get-Content ("env:VS" + "$env:VSVER" + "0COMNTOOLS"))
   - echo "Using Visual Studio %VSVER%.0 at %VSCOMNTOOLS%"
@@ -72,6 +74,16 @@ install:
   - uname -a
 
 build_script:
+  - if (!($env:Configuration -Like "*Light*")) {
+         cd C:\zlib
+         If ($env:Platform -Match "x86") {
+            nmake -f win32/Makefile.msc LOC="-DASMV -DASMINF" OBJA="inffas32.obj match686.obj" zlib.lib
+         } Else {
+            nmake -f win32/Makefile.msc AS=ml64 LOC="-DASMV -DASMINF -I." OBJA="inffasx64.obj gvmat64.obj zlib.lib
+         }
+         $env:NMAKE_EXTRA="ZLIB_DEF=/DENABLE_ZLIB_STATIC ${env:NMAKE_EXTRA}"
+         cd c:\projects\Opensc
+    }
   - bash -c "exec 0</dev/null && ./bootstrap"
   # disable features to speed up the script
   - bash -c "exec 0</dev/null && ./configure --disable-openssl --disable-readline --disable-zlib || cat config.log"
