--- a/appveyor.yml
+++ b/appveyor.yml
@@ -64,7 +64,7 @@ install:
         #  $env:NMAKE_EXTRA="ZLIB_DEF=/DENABLE_ZLIB ${env:NMAKE_EXTRA}"
         #}
         appveyor DownloadFile "https://prdownloads.sourceforge.net/libpng/zlib${env:ZLIB_VER}.zip" -FileName zlib.zip
-        7z x zlib-dll.zip -oC:\zlib
+        7z x zlib.zip -oC:\zlib
       }
   - ps: $env:VSCOMNTOOLS=(Get-Content ("env:VS" + "$env:VSVER" + "0COMNTOOLS"))
   - echo "Using Visual Studio %VSVER%.0 at %VSCOMNTOOLS%"
