--- a/appveyor.yml
+++ b/appveyor.yml
@@ -80,7 +80,7 @@ build_script:
           If ($env:Platform -Match "x86") {
              nmake -f win32/Makefile.msc LOC="-DASMV -DASMINF" OBJA="inffas32.obj match686.obj" zlib.lib
           } Else {
-             nmake -f win32/Makefile.msc AS=ml64 LOC="-DASMV -DASMINF -I." OBJA="inffasx64.obj gvmat64.obj zlib.lib
+             nmake -f win32/Makefile.msc AS=ml64 LOC="-DASMV -DASMINF -I." OBJA="inffasx64.obj gvmat64.obj inffas8664.obj" zlib.lib
           }
           $env:NMAKE_EXTRA="ZLIB_DEF=/DENABLE_ZLIB_STATIC ${env:NMAKE_EXTRA}"
           cd c:\projects\Opensc
