--- a/appveyor.yml
+++ b/appveyor.yml
@@ -66,7 +66,7 @@ install:
         #}
         appveyor DownloadFile "https://prdownloads.sourceforge.net/libpng/zlib${env:ZLIB_VER}.zip" -FileName zlib.zip
         7z x zlib.zip -oC:\
-        rename zlib-${env:ZLIB_VER_DOT} zlib
+        Rename-Item -path "c:\zlib-${env:ZLIB_VER_DOT}" -newName "zlib"
       }
   - ps: $env:VSCOMNTOOLS=(Get-Content ("env:VS" + "$env:VSVER" + "0COMNTOOLS"))
   - echo "Using Visual Studio %VSVER%.0 at %VSCOMNTOOLS%"
